airflow/logs/local_ingestion_v1.0/create_log_task_table/2023-03-17T14:07:09.635592+00:00/1.log
[2023-03-17 14:07:32,326] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: local_ingestion_v1.0.create_log_task_table manual__2023-03-17T14:07:09.635592+00:00 [queued]>
[2023-03-17 14:07:32,441] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: local_ingestion_v1.0.create_log_task_table manual__2023-03-17T14:07:09.635592+00:00 [queued]>
[2023-03-17 14:07:32,445] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-17 14:07:32,448] {taskinstance.py:1239} INFO - Starting attempt 1 of 2
[2023-03-17 14:07:32,450] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-17 14:07:32,601] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): create_log_task_table> on 2023-03-17 14:07:09.635592+00:00
[2023-03-17 14:07:32,615] {standard_task_runner.py:52} INFO - Started process 1520 to run task
[2023-03-17 14:07:32,701] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'local_ingestion_v1.0', 'create_log_task_table', 'manual__2023-03-17T14:07:09.635592+00:00', '--job-id', '94', '--raw', '--subdir', 'DAGS_FOLDER/data_ingestion_local.py', '--cfg-path', '/tmp/tmpa1x1spl9', '--error-file', '/tmp/tmpuv__y3jp']
[2023-03-17 14:07:32,714] {standard_task_runner.py:77} INFO - Job 94: Subtask create_log_task_table
[2023-03-17 14:07:33,163] {logging_mixin.py:109} INFO - Running <TaskInstance: local_ingestion_v1.0.create_log_task_table manual__2023-03-17T14:07:09.635592+00:00 [running]> on host 8920ab98807f
[2023-03-17 14:07:33,513] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=local_ingestion_v1.0
AIRFLOW_CTX_TASK_ID=create_log_task_table
AIRFLOW_CTX_EXECUTION_DATE=2023-03-17T14:07:09.635592+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-17T14:07:09.635592+00:00
[2023-03-17 14:07:33,569] {base.py:79} INFO - Using connection to: id: postgress_localhost. Host: host.docker.internal, Port: 5432, Schema: wine_quality, Login: ***, Password: ***, extra: {}
[2023-03-17 14:07:33,702] {dbapi.py:225} INFO - Running statement: 
            create table if not exists dag_runs (
                dt date,
                dag_id character varying
                primary key (dt, dat_id)
            )
        , parameters: None
[2023-03-17 14:07:33,719] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 5:                 primary key (dt, dat_id)
                                    ^

[2023-03-17 14:07:33,907] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=local_ingestion_v1.0, task_id=create_log_task_table, execution_date=20230317T140709, start_date=20230317T140732, end_date=20230317T140733
[2023-03-17 14:07:34,047] {standard_task_runner.py:92} ERROR - Failed to execute job 94 for task create_log_task_table
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 5:                 primary key (dt, dat_id)
                                    ^

[2023-03-17 14:07:34,107] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-17 14:07:34,230] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
